--- a/README
+++ b/README
@@ -1,36 +1,46 @@
 Hey future intern that is probably going to have to update this software.
 
-TBF I wrote this while i was learning the web stack (front end javascript to the mysql/php stuff), 
+TBF I wrote this while i was learning the web stack (front end javascript to the mysql/php stuff),
 
 so its probably a little messy. my bad. 
 
 basic structure of this web app- view.* files handles the map stuff(creating the map, getting data out of the database,
 displaying the data on the map) report.* files handles actually creating/validating the report, and sending it to the server
-the register.html file is just an extra page to register a name + team id into the db. 
-
-if you migrate this program into a new server, becareful about the mysql table names and columns and stuff
-Hopefully ill have made an install script to do that for you. otherwise you gotta hunt through the code for the names. sorry!
-
-
-Its a rather simple program, didn't want to get too crazy with stuff like react/angular/w.e.
+the register.html file is just an extra page to register a name + team id into the db. testing files have a "test" prefix 
 
 if you got any questions, email me dvo03@calpoly.edu. I'll answer any questions :D
 
+Front end is mostly javascript with jquery to do most of the dirty work. Back end is php. I recommend rewriting this into something
+better like python.
 
 Libraries Used:
 Leaflet for maps
 leaflet cluster markers(NOTE- I edited the src file a little bit to fix some animations) 
-Lightbox for better picture viewing
+Lightbox script for better picture viewing
 Jquery
 jquery validation plugin
 jquery form submit pugin
+jquery scrollTo plugin
+jquery ui
 getID3 to get out gps info from the videos/pictures
-Bootstrap for some of the login pages
+Bootstrap for some of the login pages ux
 Mysql for database
 
-dont forget for the php.ini set so that bigger files can be POSTed.
+dont forget to adjust the php.ini (if using php) so that bigger files can be POSTed (aka the videos).
 
+Possbile project extensions:
+So if you got this project, most likely something broke (most likely the meta data extraction is broken)
 
+After you finish fixing (or if somehow everything is still working) here are some projects i recommend:
+1. rewriting all the php server scripts to python
+
+2. creating an iphone/android app for the reporting in order to create some kind of offline mode that flushes all the reports 
+when theres cell/wifi
+
+3. migrate the entire thing to amazon web services. I think you could literally have this app live entirely off of amazon 
+(dynamoDB + the beanstalk or something???) instead of running off an ec2 instance. 
+
+4. Ask anyone who you're working with if they need any kind of software that would make their jobs easier!
 
 ▄░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▄
 ░░___________________0__________________░░
