--- a/README
+++ b/README
@@ -28,19 +28,23 @@ Mysql for database
 
 dont forget to adjust the php.ini (if using php) so that bigger files can be POSTed (aka the videos).
 
+the photo/video also does an exec call to "exif", so run "sudo apt-get install exif" if its a new machine.
+
 Possbile project extensions:
 So if you got this project, most likely something broke (most likely the meta data extraction is broken)
 
 After you finish fixing (or if somehow everything is still working) here are some projects i recommend:
 1. rewriting all the php server scripts to python
 
-2. creating an iphone/android app for the reporting in order to create some kind of offline mode that flushes all the reports 
-when theres cell/wifi
+2. creating an iphone/android app for the reporting in order to create some kind of offline mode that can save all the reports offline and can flushes all the reports 
+when theres cell/wifi signal
 
 3. migrate the entire thing to amazon web services. I think you could literally have this app live entirely off of amazon 
 (dynamoDB + the beanstalk or something???) instead of running off an ec2 instance. 
 
-4. Ask anyone who you're working with if they need any kind of software that would make their jobs easier!
+4. rewrite the program into some kind of framework (angularJS, react, etc...) instead of just straight up using jquery
+
+5. Ask anyone who you're working with if they need any kind of software that would make their jobs easier!
 
 ▄░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▄
 ░░___________________0__________________░░
